<resources>
    <string name="app_name">SHMS</string>
    <string name="welcome_back_again">Welcome back again!</string>
    <string name="please_fill_your_informations">Please fill your informations</string>
    <string name="national_id">National ID</string>
    <string name="password">Password</string>
    <string name="forget_password"><u>Forget Password?</u> </string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <u>Register now</u></string>
    <string name="a_new_perspective_on_your_patient_health">A new perspective on your patient health!</string>
    <string name="keep_track_your_patient_health_and_vital_signs_in_one_application">Keep track your patient health and vital signs in one application.</string>
    <string name="chose_user_type">Choose user type:</string>
    <string name="patient">patient</string>
    <string name="nurse">nurse</string>
    <string name="admin">admin</string>
    <string name="get_started">Get Started</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_verification_code_sent_to">Please, Enter the verification code sent to (%1$s)</string>
    <string name="_00m_03s">00m:03s</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="change_phone">Change phone</string>
    <string name="send">send</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="timeout_occurred">Timeout occurred</string>
    <string name="create_account">Create Account</string>
    <string name="select_date">Select date</string>
    <string name="phone">Phone</string>
    <string name="getting_started">Getting Started</string>
    <string name="enter_your_id_phone_and_dob">Enter your ID, phone, and DOB</string>
    <string name="already_have_an_account_login">Already have an account? <u>Login</u></string>
    <string name="pswRegex"><![CDATA[^(?=.*[0-9])(?=.*[a-zA-Z])(?=.*[@#$%^&+=])(?=\\S+$).{8,16}$]]></string>
    <string name="invalid_phone_format">Invalid Phone Format</string>
    <string name="blood_type">Blood Type</string>
    <string name="a">A+</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="vitial_signs">Vitial Signs</string>
    <string name="last_reading">Last reading:</string>
    <string name="my_health">My Health</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="health_id_3000">Health ID: 3000**********</string>
    <string name="_26_09_2001">26-09-2001</string>
    <string name="date_of_birth">Date of Birth: dd/mm/yyyy</string>
    <string name="date_of_birth_">Date of Birth:</string>
    <string name="national_id_iqama_id">National ID/Iqama ID</string>
    <string name="_761">*******761</string>
    <string name="personal_information">Personal Information</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_966_608">+966******608</string>
    <string name="email_address">Email address</string>
    <string name="shahad_moha2001_gmail_com">shahad.moha2001@gmail.com</string>
    <string name="body_tempreture">Body Tempreture</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="breath_rate">Breath Rate</string>
    <string name="demo_alert">ALERT Patient room 001 is currently experiencing a high temperature, 40°C Immediate intervention is required.</string>
    <string name="patients_information">Patients Information</string>
    <string name="notifications">Notifications</string>
    <string name="age">Age</string>
    <string name="search_for_a_patient">Search for a patient</string>
    <string name="search_for_a_nurse">Search for a nurse</string>
    <string name="room_009">Room: 009</string>
    <string name="_1h_her_temperature_has_risen_to_39_degrees">1h: Her temperature has risen to 39 degrees.</string>
    <string name="adminhub">AdminHub</string>
    <string name="work_id_1129">Work ID: 1129**********</string>
    <string name="yara_ali">Yara Ali</string>
    <string name="add_patient">Add Patient</string>
    <string name="delete_patient">Delete Patient</string>
    <string name="delete_nurse">Delete Nurse</string>
    <string name="update_data">Update Nurse</string>
    <string name="update_patient">Update Patient</string>
    <string name="add_nurse">Add nurse</string>
    <string name="work_id_or_nurse_name">Work id, or nurse name</string>
    <string name="update">Update</string>
    <string name="helth_id_or_patient_name">helth id, or patient name</string>
    <string name="name">Name</string>
    <string name="work_id">Work ID</string>
    <string name="create_nurse">Create Nurse</string>
    <string name="work_id_">Work ID: %1$s</string>
    <string name="work_id__">Work Id: %1$s</string>
    <string name="helthId">Health Id: %1$s</string>
    <string name="logout">Logout</string>
    <string name="enter_your_national_id">Enter your national Id</string>
    <string name="new_password">New Password</string>
    <string name="check">check</string>
    <string name="enter_sent_code">Enter sent code</string>
    <string name="help">Help</string>
    <string name="reset_password">Reset Password</string>
</resources>