<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="start|center"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".utils.Forget">

    <EditText
        android:id="@+id/ed_nationalId"
        android:padding="5dp"
        android:background="@color/white"
        android:hint="@string/enter_your_national_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btnSend"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_code"
        android:visibility="gone"
        android:padding="5dp"
        android:hint="@string/enter_sent_code"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btnCheck"
        android:visibility="gone"
        android:text="@string/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_password"
        android:visibility="gone"
        android:padding="5dp"
        android:hint="@string/new_password"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>