<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".views.patient.CreateAccount">

    <include
        android:id="@+id/wave"
        layout="@layout/wave"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="51dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/getting_started"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave" />

    <TextView
        android:id="@+id/please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/enter_your_id_phone_and_dob"
        android:textColor="@color/texts"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="17dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/please">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/texts"
            android:textColorHint="@color/texts"
            app:boxStrokeColor="@color/second"
            app:boxStrokeWidth="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/texts"
            android:textColorHint="@color/texts"
            app:boxStrokeColor="@color/second"
            app:boxStrokeWidth="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_nationalId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:hint="@string/national_id"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/texts"
            android:textColorHint="@color/texts"
            app:boxStrokeColor="@color/second"
            app:boxStrokeWidth="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/showDatePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/second"
            android:text="@string/select_date" />

        <TextView
            android:id="@+id/selectedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/texts"
            android:textColorHint="@color/texts"
            app:boxStrokeColor="@color/second"
            app:boxStrokeWidth="5dp"
            app:passwordToggleTint="@color/second">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/texts"
            android:textColorHint="@color/texts"
            app:boxStrokeColor="@color/second"
            app:boxStrokeWidth="5dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/second">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/second"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/second"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnCreate"
        app:layout_constraintEnd_toEndOf="@id/btnCreate"
        app:layout_constraintStart_toStartOf="@+id/btnCreate"
        app:layout_constraintTop_toBottomOf="@+id/form" />


    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/second"
        android:padding="11dp"
        android:text="@string/create_account"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/form"
        app:layout_constraintStart_toStartOf="@+id/form"
        app:layout_constraintTop_toBottomOf="@id/form" />

    <include
        android:id="@+id/msg"
        layout="@layout/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCreate" />
</androidx.constraintlayout.widget.ConstraintLayout>